--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "A server-side rendered Flask application for Fashion Paradise, bu
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dotenv>=0.9.9",
     "flask>=3.1.1",
+    "httpx>=0.28.1",
 ]
