--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "bcrypt>=4.3.0",
     "dotenv>=0.9.9",
     "flask>=3.1.1",
+    "pycryptodome>=3.23.0",
     "pydantic>=2.11.7",
     "pymongo>=4.14.0",
 ]
