--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "flask>=3.1.1",
     "pycryptodome>=3.23.0",
     "pydantic>=2.11.7",
+    "pyjwt>=2.10.1",
     "pymongo>=4.14.0",
     "redis>=6.4.0",
 ]
